cmake_minimum_required(VERSION 3.24)
project(mtj)

set(CMAKE_CXX_STANDARD 17)



add_executable(2016 week1/2016.cpp)
add_executable(max_avg week3/max_avg.cpp)
add_executable(cointower week1/cointower.cpp)
add_executable(triangle week1/triangle.cpp)
add_executable(palace week3/palace.cpp)
add_executable(chafen week3/chafen.cpp)
add_executable(online_pre_sum week3/online_pre_sum.cpp)
add_executable(ticket week3/ticket.cpp)
add_executable(temperature week4/temperature.cpp)
add_executable(food_distribution week4/food_distribution.cpp)
add_executable(food_distribution2 week4/food_distribution2.cpp)
add_executable(logging week4/logging.cpp)
add_executable(room week4/room.cpp)
add_executable(fib_string week5/fib_string.cpp)
add_executable(email week5/email.cpp)
add_executable(swap_cup week5/swap_cup.cpp)
add_executable(account week5/account.cpp)
add_executable(disorder week5/disorder.cpp)