cmake_minimum_required(VERSION 3.24)
project(mtj)

set(CMAKE_CXX_STANDARD 17)



add_executable(2016 week1/2016.cpp)
add_executable(max_avg week3/max_avg.cpp)
add_executable(cointower week1/cointower.cpp)
add_executable(triangle week1/triangle.cpp)
add_executable(palace week3/palace.cpp)
add_executable(chafen week3/chafen.cpp)
add_executable(online_pre_sum week3/online_pre_sum.cpp)
add_executable(ticket week3/ticket.cpp)
add_executable(temperature week4/temperature.cpp)
add_executable(food_distribution week4/food_distribution.cpp)
add_executable(food_distribution2 week4/food_distribution2.cpp)
add_executable(logging week4/logging.cpp)
add_executable(room week4/room.cpp)
add_executable(fib_string week5/fib_string.cpp)
add_executable(email week5/email.cpp)
add_executable(swap_cup week5/swap_cup.cpp)
add_executable(account week5/account.cpp)
add_executable(disorder week5/disorder.cpp)
add_executable(dis_segment week6/dis_segment.cpp)
add_executable(oddevensort week6/oddevensort.cpp)
add_executable(new_dict week6/new_dict.cpp)
add_executable(manuplate week6/manuplate.cpp)
add_executable(group_partner week6/group_partner.cpp)
add_executable(stack_min week7/stack_min.cpp)
add_executable(bracket_substr week7/bracket_substr.cpp)
add_executable(expression_recur week8/expression_recur.cpp)
add_executable(top_k_select week7/top_k_select.cpp)
add_executable(exoression_without_rec week8/exeression_without_rec.cpp)
add_executable(deque week7/deque.cpp)
add_executable(top_k_multi_vector week7/top_k_multi_vector.cpp)
add_executable(test oo_learn/test.cpp)
add_executable(vector oo_learn/vector.cpp)
add_executable(return_refer oo_learn/return_refer.cpp)
add_executable(complex_new oo_learn/complex_new.cpp)
add_executable(diamond oo_learn/diamond.cpp)
add_executable(heap_min_max week8/heap_min_max.cpp)
add_executable(task_priority week8/task_priority.cpp)
add_executable(stack_template week8/stack_template.cpp)
add_executable(function_topk week8/function_topk.cpp)
add_executable(ab_pair week9/ab_pair.cpp)
add_executable(weight_map week9/weight_map.cpp)
add_executable(decode_str week9/decode_str.cpp)
add_executable(word_category week9/word_category.cpp)
add_executable(worm week9/worm.cpp)